--- a/Objects/CofreDigitalTiva.build_log.htm
+++ b/Objects/CofreDigitalTiva.build_log.htm
@@ -17,17 +17,23 @@ Library Manager: ArmAr.exe V5.06 update 6 (build 750)
 Hex Converter:   FromElf.exe V5.06 update 6 (build 750)
 CPU DLL:         SARMCM3.DLL V5.25.2.0
 Dialog DLL:      DCM.DLL V1.17.1.0
-Target DLL:      UL2CM3.DLL V1.160.12.0
+Target DLL:      lmidk-agdi.dll V???
 Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
-C:\Users\dreew\OneDrive\Área de Trabalho\LAB 04 - Codigo\MotorDC.uvprojx
+C:\Users\dreew\OneDrive\Área de Trabalho\MotorDC\MotorDC.uvprojx
 Project File Date:  11/21/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-".\Objects\CofreDigitalTiva.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+dcMotor.h(10): warning:  #1-D: last line of file ends without a newline
+  #endif
+main.c: 1 warning, 0 errors
+linking...
+Program Size: Code=4540 RO-data=60 RW-data=0 ZI-data=1120  
+".\Objects\CofreDigitalTiva.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -41,7 +47,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C129
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
