--- a/Objects/CofreDigitalTiva.build_log.htm
+++ b/Objects/CofreDigitalTiva.build_log.htm
@@ -28,12 +28,30 @@ Project File Date:  11/21/2018
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
 compiling main.c...
+utils.h(26): warning:  #1295-D: Deprecated declaration ConfigInterruptPortJ - give arg types
+  void ConfigInterruptPortJ();
 dcMotor.h(10): warning:  #1-D: last line of file ends without a newline
   #endif
-main.c: 1 warning, 0 errors
+main.c(44): warning:  #1295-D: Deprecated declaration ConfigInterruptPortC - give arg types
+  void ConfigInterruptPortC();
+main.c(45): warning:  #1295-D: Deprecated declaration ConfigInterruptPortJ - give arg types
+  void ConfigInterruptPortJ();
+main.c(111): warning:  #546-D: transfer of control bypasses initialization of:
+            variable "selected_direction"  (declared at line 119)
+  		switch(current_step){
+  		^
+main.c(268): warning:  #223-D: function "DisableInterrupts" declared implicitly
+  DisableInterrupts();
+main.c(273): warning:  #223-D: function "EnableInterrupts" declared implicitly
+  EnableInterrupts();
+main.c(277): warning:  #223-D: function "DisableInterrupts" declared implicitly
+  DisableInterrupts();
+main.c(283): warning:  #223-D: function "EnableInterrupts" declared implicitly
+  EnableInterrupts();
+main.c: 9 warnings, 0 errors
 linking...
-Program Size: Code=4540 RO-data=60 RW-data=0 ZI-data=1120  
-".\Objects\CofreDigitalTiva.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=4832 RO-data=76 RW-data=20 ZI-data=1124  
+".\Objects\CofreDigitalTiva.axf" - 0 Error(s), 9 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -47,7 +65,7 @@ Package Vendor: Keil
   C:\Keil_v5\ARM\PACK\Keil\TM4C_DFP\1.1.0\Device\Include\TM4C129
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
